Get rid of inapp banner and fix z-index with modals

--- a/src/stylesheets/z-index.scss
+++ b/src/stylesheets/z-index.scss
@@ -57,3 +57,7 @@ $z-index: (
 @mixin z-index($key) {
   z-index: z-index($key);
 }
+
+@mixin z-index-important($key) {
+  z-index: z-index($key) !important;
+}
